# study-ssalmeok

./: .gitignore  LICENSE  README.md  StudySsalmeok.spec  build_exe.bat  main.py  pyproject.toml  stt.py
scripts/: build_exe.ps1
src/: config.py
src/application/: converter.py
src/domain/: models.py
src/services/: __init__.py  chunker.py  prompt_builder.py  text_cleaner.py  transcriber.py
src/ui/: app.py
tests/: test_chunker.py  test_text_cleaner.py  test_transcriber.py
