[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-ssalmeok"
version = "0.1.0"
description = "Convert lecture audio files into ChatGPT prompt files for study summaries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "PySide6>=6.6.0",
]

[project.scripts]
study-ssalmeok = "main:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
where = ["src"]
